--- a/css/splash.css
+++ b/css/splash.css
@@ -8,8 +8,9 @@ header {
     position: relative;
     left: 0;
     top: 0;
-    width: 1005;
+    width: 100%;
     height: 80px;
+    z-index: -1;
 }
 
 header h4{
